--- a/builds/Test/style/index.css
+++ b/builds/Test/style/index.css
@@ -1,3 +1,8 @@
+*,body {
+    margin: 0;
+    padding: 0;
+}
+
 .container {
     display: flex;
     justify-content: flex-start;
@@ -8,7 +13,6 @@
     flex-wrap: wrap;
     gap: 16px;
 }
-
 
 .grid-container {
     display: grid;
