--- a/src/templates/head.component.html
+++ b/src/templates/head.component.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{meta}}
-    <title>{{title}}</title>
+    {{&meta}}
+    <title>{{&title}}</title>
 </head>
