--- a/src/templates/head.component.html
+++ b/src/templates/head.component.html
@@ -1,6 +1,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {{&meta}}
+    {{#meta}}
+    <meta name="{{name}}" content="{{content}}">
+    {{/meta}}
     <title>{{&title}}</title>
 </head>
