--- a/src/templates/head.component.html
+++ b/src/templates/head.component.html
@@ -5,4 +5,7 @@
     <meta name="{{name}}" content="{{content}}">
     {{/meta}}
     <title>{{&title}}</title>
+    {{#children}}
+        {{.}}
+    {{/children}}
 </head>
