--- a/builds/Test/public/style/navbar.css
+++ b/builds/Test/public/style/navbar.css
@@ -1,9 +1,9 @@
-.topnav {
-  overflow: hidden;
+.navbar {
+  /* overflow: hidden; */
   background-color: #333;
 }
 
-.topnav a {
+.navbar a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -13,40 +13,40 @@
   font-size: 17px;
 }
 
-.topnav a:hover {
+.navbar a:hover {
   background-color: #ddd;
   color: black;
 }
 
-.topnav a.active {
+.navbar a.active {
   background-color: #04aa6d;
   color: white;
 }
 
-.topnav .icon {
+.navbar .icon {
   display: none;
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
+  .navbar a:not(:first-child) {
     display: none;
   }
-  .topnav a.icon {
+  .navbar a.icon {
     float: right;
     display: block;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {
+  .navbar.responsive {
     position: relative;
   }
-  .topnav.responsive .icon {
+  .navbar.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive a {
+  .navbar.responsive a {
     float: none;
     display: block;
     text-align: left;
