--- a/src/templates/navbar.component.html
+++ b/src/templates/navbar.component.html
@@ -1,7 +1,7 @@
-<nav>
+<nav class="topnav" id="myTopnav">
     <style>
         .topnav {
-            overflow: hidden;
+            /* overflow: hidden; */
             background-color: #333;
         }
 
@@ -59,27 +59,21 @@
         }
     </style>
 
+<a href="{{href}}">{{&title}}</a>
 
-    {{&title}}
     {{#links}}
     <a href="{{href}}">{{&text}}</a>
     {{/links}}
+
+    {{#children}}
+        {{.}}
+    {{/children}}
 
     <a class="icon" onclick="document.getElementById('myTopnav').classList.toggle('responsive')"><svg
             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" fill="#fff">
             <path
                 d="M1 2.75A.75.75 0 0 1 1.75 2h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 2.75Zm0 5A.75.75 0 0 1 1.75 7h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 7.75ZM1.75 12h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Z">
             </path>
-        </svg></a>
-
-    <script>
-        function myFunction() {
-            var x = document.getElementById("myTopnav");
-            if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
+        </svg>
+    </a>
 </nav>
