Template CSS and JS

--- a/src/templates/body.component.html
+++ b/src/templates/body.component.html
@@ -2,4 +2,10 @@
     {{#children}}
         {{.}}
     {{/children}}
+    {{#templateScripts}}
+    {{.}}
+    {{/templateScripts}}
+    {{#scripts}}
+        {{.}}
+    {{/scripts}}
 </body>
