--- a/src/templates/button.html
+++ b/src/templates/button.html
@@ -1,3 +1,1 @@
-<button type="button">
-    {{&text}}
-</button>
+<button type="button" class="px-8 py-3 font-semibold rounded dark:bg-gray-100 dark:text-gray-800">{{&text}}</button>
