--- a/builds/Components/index.html
+++ b/builds/Components/index.html
@@ -1,1 +1,41 @@
-<html id="index.html"><head><meta charset="UTF-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><meta name="" content=""></meta><title>Index Page</title><link rel="stylesheet" href="./userStyles.css"><link rel="stylesheet" href="./templates/header.css"></link></head><body><script src="./userScripts.js"></script><header class="p-4 dark:bg-gray-800 dark:text-gray-100"><div class="container flex justify-between h-16 mx-auto"><a rel="noopener noreferrer" href="#" aria-label="Back to homepage" class="flex items-center p-2"><img class="w-8 h-8 dark:text-yellow-400" src="https://source.unsplash.com/random/480x360" alt=""></img><h1 class="mx-4 text-lg font-bold">Name</h1></a><ul class="items-stretch hidden space-x-3 md:flex"><li class="flex"><a rel="noopener noreferrer" href="https://google.com" class="flex items-center px-4 -mb-1 border-b-2 dark:border-transparent">Link1</a></li><li class="flex"><a rel="noopener noreferrer" href="https://google.com" class="flex items-center px-4 -mb-1 border-b-2 dark:border-transparent">Link2</a></li><li class="flex"><a rel="noopener noreferrer" href="https://google.com" class="flex items-center px-4 -mb-1 border-b-2 dark:border-transparent">Link3</a></li><li class="flex"><a rel="noopener noreferrer" href="https://google.com" class="flex items-center px-4 -mb-1 border-b-2 dark:border-transparent">Link4</a></li></ul><button id="header-collapse" class="flex justify-end p-4 md:hidden"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg></button></div></header><script src="https://cdn.tailwindcss.com"></script><script src="./templates/carousel.js"></script><script src="./templates/header.js"></script></body></html>
+<html id="index.html">
+
+<head>
+    <meta charset="UTF-8">
+    </meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </meta>
+    <meta name="" content="">
+    </meta>
+    <title>Index Page</title>
+    <link rel="stylesheet" href="./userStyles.css">
+    <link rel="stylesheet" href="./templates/header.css">
+    </link>
+</head>
+
+<body>
+    <script src="./userScripts.js"></script>
+    <div class="p-5 mx-auto sm:p-10 md:p-16 dark:dark:bg-gray-800 dark:dark:text-gray-100">
+        <div class="flex flex-col max-w-3xl mx-auto overflow-hidden rounded"><img
+                src="https://source.unsplash.com/random/480x360" alt=""
+                class="w-full h-60 sm:h-96 dark:dark:bg-gray-500"></img>
+            <div
+                class="p-6 pb-12 m-4 mx-auto -mt-16 space-y-6 lg:max-w-2xl sm:px-10 sm:mx-12 lg:rounded-md dark:dark:bg-gray-900">
+                <div class="space-y-2"><a rel="noopener noreferrer" href="#"
+                        class="inline-block text-2xl font-semibold sm:text-3xl">Hello World</a>
+                    <p class="text-xs dark:dark:text-gray-400">By
+                        <a rel="noopener noreferrer" href="#" class="text-xs hover:underline">Sujal Choudhari</a>
+                    </p>
+                </div>
+                <div class="dark:dark:text-gray-100">
+                    <p>This is a description</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./templates/carousel.js"></script>
+    <script src="./templates/header.js"></script>
+</body>
+
+</html>
