--- a/builds/Components/index.html
+++ b/builds/Components/index.html
@@ -1,41 +1,3 @@
-<html id="index.html">
-
-<head>
-    <meta charset="UTF-8">
-    </meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </meta>
-    <meta name="" content="">
-    </meta>
-    <title>Index Page</title>
-    <link rel="stylesheet" href="./userStyles.css">
-    <link rel="stylesheet" href="./templates/header.css">
-    </link>
-</head>
-
-<body>
-    <script src="./userScripts.js"></script>
-    <div class="p-5 mx-auto sm:p-10 md:p-16 dark:dark:bg-gray-800 dark:dark:text-gray-100">
-        <div class="flex flex-col max-w-3xl mx-auto overflow-hidden rounded"><img
-                src="https://source.unsplash.com/random/480x360" alt=""
-                class="w-full h-60 sm:h-96 dark:dark:bg-gray-500"></img>
-            <div
-                class="p-6 pb-12 m-4 mx-auto -mt-16 space-y-6 lg:max-w-2xl sm:px-10 sm:mx-12 lg:rounded-md dark:dark:bg-gray-900">
-                <div class="space-y-2"><a rel="noopener noreferrer" href="#"
-                        class="inline-block text-2xl font-semibold sm:text-3xl">Hello World</a>
-                    <p class="text-xs dark:dark:text-gray-400">By
-                        <a rel="noopener noreferrer" href="#" class="text-xs hover:underline">Sujal Choudhari</a>
-                    </p>
-                </div>
-                <div class="dark:dark:text-gray-100">
-                    <p>This is a description</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./templates/carousel.js"></script>
-    <script src="./templates/header.js"></script>
-</body>
-
-</html>
+<html id="index.html"><head><meta charset="UTF-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><meta name="" content=""></meta><title>Index Page</title><link rel="stylesheet" href="./userStyles.css"><link rel="stylesheet" href="./templates/header.css"></link></head><body><script src="./userScripts.js"></script><section class="dark:bg-gray-800 dark:text-gray-100"><div class="container flex flex-col justify-center p-6 mx-auto sm:py-12 lg:py-24 lg:flex-row lg:justify-between"><div class="flex items-center justify-center p-6 mt-8 lg:mt-0 h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128"><img src="https://source.unsplash.com/random/480x360" alt="" class="object-contain h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128"></img></div><div class="flex flex-col justify-center p-6 text-center rounded-sm lg:max-w-md xl:max-w-lg lg:text-left"><h1 class="text-5xl font-bold leading-none sm:text-6xl">Ansh
+            </h1><p class="mt-6 mb-8 text-lg sm:mb-12">This is a description
+            </p><div class="flex flex-col space-y-4 sm:items-center sm:justify-center sm:flex-row sm:space-y-0 sm:space-x-4 lg:justify-start"><a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold rounded dark:bg-yellow-400 dark:text-gray-900"></a><a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold border rounded dark:border-gray-100"></a></div></div></div></section><script src="https://cdn.tailwindcss.com"></script><script src="./templates/carousel.js"></script><script src="./templates/header.js"></script></body></html>
