--- a/builds/Components/index.html
+++ b/builds/Components/index.html
@@ -1,3 +1,29 @@
-<html id="index.html"><head><meta charset="UTF-8"></meta><meta name="viewport" content="width=device-width, initial-scale=1.0"></meta><meta name="" content=""></meta><title>Index Page</title><link rel="stylesheet" href="./userStyles.css"><link rel="stylesheet" href="./templates/header.css"></link></head><body><script src="./userScripts.js"></script><section class="dark:bg-gray-800 dark:text-gray-100"><div class="container flex flex-col justify-center p-6 mx-auto sm:py-12 lg:py-24 lg:flex-row lg:justify-between"><div class="flex items-center justify-center p-6 mt-8 lg:mt-0 h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128"><img src="https://source.unsplash.com/random/480x360" alt="" class="object-contain h-72 sm:h-80 lg:h-96 xl:h-112 2xl:h-128"></img></div><div class="flex flex-col justify-center p-6 text-center rounded-sm lg:max-w-md xl:max-w-lg lg:text-left"><h1 class="text-5xl font-bold leading-none sm:text-6xl">Ansh
-            </h1><p class="mt-6 mb-8 text-lg sm:mb-12">This is a description
-            </p><div class="flex flex-col space-y-4 sm:items-center sm:justify-center sm:flex-row sm:space-y-0 sm:space-x-4 lg:justify-start"><a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold rounded dark:bg-yellow-400 dark:text-gray-900"></a><a rel="noopener noreferrer" href="#" class="px-8 py-3 text-lg font-semibold border rounded dark:border-gray-100"></a></div></div></div></section><script src="https://cdn.tailwindcss.com"></script><script src="./templates/carousel.js"></script><script src="./templates/header.js"></script></body></html>
+<html id="index.html">
+
+<head>
+    <meta charset="UTF-8">
+    </meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </meta>
+    <meta name="" content="">
+    </meta>
+    <title>Index Page</title>
+    <link rel="stylesheet" href="./userStyles.css">
+    <link rel="stylesheet" href="./templates/header.css">
+    </link>
+</head>
+
+<body>
+    <script src="./userScripts.js"></script>
+    <div class="w-16 h-16 border-4 border-dashed rounded-full animate-spin dark:border-yellow-400"></div>
+    <div class="flex items-center justify-center space-x-2">
+        <div class="w-4 h-4 rounded-full animate-pulse dark:bg-yellow-400"></div>
+        <div class="w-4 h-4 rounded-full animate-pulse dark:bg-yellow-400"></div>
+        <div class="w-4 h-4 rounded-full animate-pulse dark:bg-yellow-400"></div>
+    </div>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./templates/carousel.js"></script>
+    <script src="./templates/header.js"></script>
+</body>
+
+</html>
