Template Props and Types

--- a/src/templates/article2.html
+++ b/src/templates/article2.html
@@ -3,7 +3,7 @@
 		<h1 class="text-5xl font-bold leading-none">{{title}}</h1>
 		<div class="flex flex-wrap space-x-2 text-sm dark:text-gray-400">
 			{{#tags}}
-            <a rel="noopener noreferrer" href="{{link}}" class="p-1 hover:underline">{{name}}</a>
+            <a rel="noopener noreferrer" href="{{link}}" target="{{target}}" class="p-1 hover:underline">{{name}}</a>
 
             {{/tags}}
 		</div>
