💄 Example Website a new example added under tests.

--- a/templates/feature.html
+++ b/templates/feature.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="lg:w-1/2 xl:w-3/5 dark:bg-gray-800">
 			<div class="flex items-center justify-center p-4 md:p-8 lg:p-12">
-				<img src="{{imgUrl}}" alt="{{imgAlt}}" class="rounded-lg shadow-lg dark:bg-gray-500 aspect-video sm:min-h-96">
+				<img src="{{imgUrl}}" alt="{{imgAlt}}" class="rounded-lg shadow-lg dark:bg-gray-500  sm:min-h-96">
 			</div>
 		</div>
 	</div>
