--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <nav>
 	<div class="logo">
-		<img src="{{imgUrl}}" alt="Logo Image">
+		<img class="rounded-full" src="{{imgUrl}}" alt="Logo Image">
 		{{title}}
 	</div>
 	<div class="hamburger">
@@ -14,7 +14,7 @@
 		{{/links}}
 
 		{{#primary}}
-		<li><button class="login-button" href="#">{{primary}}</button></li>
+		<li><button class="login-button text-white" href="#">{{primary}}</button></li>
 		{{/primary}}
 		{{#secondary}}
 		<li><button class="join-button" href="#">{{secondary}}</button></li>
