🍱 Added buttons 3 types of buttons added primary secondary and ghost. Css might need a rework,

--- a/templates/body.html
+++ b/templates/body.html
@@ -1,5 +1,4 @@
-<body {{#attributes}} {{&name}}="{{&value}}" {{/attributes}}
->
+<body {{#attributes}} {{&name}}="{{&value}}" {{/attributes}}>
     {{#children}}
     {{&.}}
     {{/children}}
